Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
5.5.56
-
Centos 7.4.1708
Description
MariaDB slave stops with following errors.
180511 11:07:58 [ERROR] Slave I/O: Unexpected master's heartbeat data: heartbeat is not compatible with local info;the event's data: log_file_name mysql-bin.000009 log_pos 1054262041, Error_code: 1623
180511 11:07:58 [ERROR] Slave I/O: Relay log write failure: could not queue event from master, Error_code: 1595
180511 11:07:58 [Note] Slave I/O thread exiting, read up to log 'mysql-bin.000009', position 1053640539
I am using Master-Master and Master-Slave Replication using MariaDB servers. I am replicating all Databases on Master-Master Replication but there is only one databse replicating on slave servers.Slave servers ignores the query from another database which is not replicating there. All other Binlogs which from not replicating skips by slave servers. We have heavy traffic on Master server. Slaves only for select purpose. Master databse server's system load goes upto 10%.
NOTE: All the slaves are connected using Gigabit Ethernet(Private Network).
We are using 24 cores CPU and 32GB RAM on master and 16 cores CPU and 24GB RAM on each slave.
I am using following version of MariaDB server on my 3 servers
mysql Ver 15.1 Distrib 5.5.56-MariaDB, for Linux (x86_64) using readline 5.1
Operating system
CentOS Linux release 7.4.1708 (Core)
Following is diagram of replication
Attachments
Issue Links
- relates to
-
MDEV-29981 Replica stops with "Found invalid event in binary log"
-
- Closed
-